--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Robin Na
 ###############################################
 
 navbar-links:
-  CV: "https://beautifuljekyll.com"
+  CV: "/assets/files/CV.pdf"
   #About Me: "aboutme"
   #Resources:
   #  - Beautiful Jekyll: "https://beautifuljekyll.com"
@@ -53,7 +53,7 @@ social-network-links:
   email: "robinna@mit.edu"
   # rss: true  # remove this line if you don't want to show an RSS link at the bottom
  # facebook: deanattali
-  github: robin-na
+ # github: robin-na
  # twitter: daattali
  # patreon: DeanAttali
  # youtube: c/daattali
