--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Robin Na
 ###############################################
 
 navbar-links:
-  CV: "/assets/files/CV.pdf"
+  CV: "/assets/files/CV_RobinNa.pdf"
   History: "history"
   #About Me: "aboutme"
   #Resources:
